alteração (aba nova)

--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
         >
           Escovar com Vídeo
         </button>
+        <button
+          id="productsTab"
+          class="px-4 sm:px-6 py-1 sm:py-2 rounded-full transition-all text-pink-400 text-sm sm:text-base"
+        >
+          Produtos
+        </button>
       </nav>
 
       <!-- Content -->
@@ -214,11 +220,11 @@
             <ol
               class="list-decimal list-inside space-y-1 sm:space-y-2 text-gray-700 text-xs sm:text-sm"
             >
+              <li>Use fio dental pelo menos uma vez ao dia</li>
               <li>Use uma quantidade pequena de pasta de dentes</li>
               <li>Escove suavemente em movimentos circulares</li>
               <li>Não se esqueça de escovar a parte interna dos dentes</li>
               <li>Escove a língua para remover bactérias</li>
-              <li>Use fio dental pelo menos uma vez ao dia</li>
             </ol>
           </div>
 
@@ -437,14 +443,9 @@
               class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4 mb-3 sm:mb-4"
             >
               <img
-                src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/c988aa49-0d59-48ed-a9ec-a21c713c306b.png"
-                alt="Troll feliz com dentes brilhantes e sorriso radiante"
+                src="imgs/trolls-felizes.jpeg"
+                alt="Trolls felizes"
                 class="w-20 h-20 sm:w-24 sm:h-24 rounded-full border-4 border-white shadow-md troll-dance"
-              />
-              <img
-                src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/a091beea-b4fd-4210-a76e-c710e4d942bf.png"
-                alt="Escova de dentes colorida com pasta azul e rosa"
-                class="w-20 h-20 sm:w-24 sm:h-24 rounded-full border-4 border-white shadow-md bounce"
               />
             </div>
 
@@ -484,6 +485,197 @@
             </div>
           </div>
         </div>
+
+        <!-- Products Content -->
+        <div id="productsContent" class="hidden">
+          <h2
+            class="text-xl sm:text-2xl font-semibold text-pink-400 mb-4 sm:mb-6 text-center"
+          >
+            Produtos dos Trolls para Higiene Bucal
+          </h2>
+
+          <div
+            class="grid md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6 mb-6 sm:mb-8"
+          >
+            <!-- Album dental -->
+            <div
+              class="bg-gradient-to-br from-pink-50 to-pink-100 p-4 sm:p-6 rounded-xl shadow-md hover:shadow-lg transition-shadow"
+            >
+              <div class="text-center mb-4">
+                <div
+                  class="w-24 h-24 sm:w-32 sm:h-32 mx-auto mb-3 bg-pink-200 rounded-full flex items-center justify-center"
+                >
+                  <a
+                    href="https://www.gumprofissional.com.br/infantil/trolls/album-para-dente-de-leite"
+                    ><img src="imgs/album-gum.PNG" alt=""
+                  /></a>
+                </div>
+                <h3 class="font-semibold text-pink-600 text-lg sm:text-xl mb-2">
+                  GUM Álbum Dental Trolls Para Dente de Leite - 1 unidade
+                </h3>
+              </div>
+            </div>
+
+            <!-- Pasta de Dentes -->
+            <div
+              class="bg-gradient-to-br from-blue-50 to-blue-100 p-4 sm:p-6 rounded-xl shadow-md hover:shadow-lg transition-shadow"
+            >
+              <div class="text-center mb-4">
+                <div
+                  class="w-24 h-24 sm:w-32 sm:h-32 mx-auto mb-3 bg-blue-200 rounded-full flex items-center justify-center"
+                >
+                  <a href="https://www.gumprofissional.com.br/infantil/trolls/escova-dental-infantil-manual-trolls-2unidades"><img src="imgs/escova-gum.PNG" alt=""></a>
+                </div>
+                <h3 class="font-semibold text-blue-600 text-lg sm:text-xl mb-2">
+                  GUM Escova Dental Infantil Trolls Manual - Personagem Sortido
+                  - 2 unidades
+                </h3>
+              </div>
+            </div>
+
+            <!-- Pasta de dente -->
+            <div
+              class="bg-gradient-to-br from-pink-50 to-pink-100 p-4 sm:p-6 rounded-xl shadow-md hover:shadow-lg transition-shadow"
+            >
+              <div class="text-center mb-4">
+                <div
+                  class="w-24 h-24 sm:w-32 sm:h-32 mx-auto mb-3 flex items-center justify-center"
+                >
+                  <a href="https://www.gumprofissional.com.br/infantil/trolls/gel-dental-trolls"><img src="imgs/pasta-gum.PNG" alt=""></a>
+                </div>
+                <h3 class="font-semibold text-pink-600 text-lg sm:text-xl mb-2">
+                  GUM Gel Dental Infantil Trolls 50g (sabor bubble gum)
+                </h3>
+              </div>
+            </div>
+
+            <!-- Enxaguante -->
+            <div
+              class="bg-gradient-to-br from-blue-50 to-blue-100 p-4 sm:p-6 rounded-xl shadow-md hover:shadow-lg transition-shadow"
+            >
+              <div class="text-center mb-4">
+                <div
+                  class="w-24 h-24 sm:w-32 sm:h-32 mx-auto mb-3 flex items-center justify-center"
+                >
+                  <a href="https://www.gumprofissional.com.br/infantil/trolls/enxaguante-bucal-trolls-250ml"><img src="imgs/enxaguante-gum.PNG" alt=""></a>
+                </div>
+                <h3 class="font-semibold text-blue-600 text-lg sm:text-xl mb-2">
+                  GUM Enxaguante Antisséptico Bucal Infantil Trolls 250ml - 1 unidade (sabor bubble gum)
+                </h3>
+              </div>
+            </div>
+
+            <!-- 1 Escova -->
+            <div
+              class="bg-gradient-to-br from-pink-50 to-blue-100 p-4 sm:p-6 rounded-xl shadow-md hover:shadow-lg transition-shadow"
+            >
+              <div class="text-center mb-4">
+                <div
+                  class="w-24 h-24 sm:w-32 sm:h-32 mx-auto mb-3 flex items-center justify-center"
+                >
+                  <a href="https://www.gumprofissional.com.br/infantil/trolls/escova-timer-light-trolls"><img src="imgs/escova1-gum.PNG" alt=""></a>
+                </div>
+                <h3
+                  class="font-semibold text-purple-600 text-lg sm:text-xl mb-2"
+                >
+                  GUM Escova Dental Infantil Trolls com Luz Piscante Timer Light - Personagem Sortido - 1 unidade
+                </h3>
+              </div>
+            </div>
+
+            <!-- Fio dental -->
+            <div
+              class="bg-gradient-to-br from-blue-50 to-pink-100 p-4 sm:p-6 rounded-xl shadow-md hover:shadow-lg transition-shadow"
+            >
+              <div class="text-center mb-4">
+                <div
+                  class="w-24 h-24 sm:w-32 sm:h-32 mx-auto mb-3 bg-gradient-to-r from-blue-200 to-pink-200 rounded-full flex items-center justify-center"
+                >
+                  <a href="https://www.gumprofissional.com.br/infantil/trolls/flosser-trolls-20unidades"><img src="imgs/fio-gum.PNG" alt=""></a>
+                </div>
+                <h3
+                  class="font-semibold text-purple-600 text-lg sm:text-xl mb-2"
+                >
+                  GUM Fio Dental Infantil com Haste Flossers Trolls - 20 unidades (sabor uva)
+                </h3>
+              </div>
+            </div>
+          </div>
+
+          <!-- Benefits Section -->
+          <div
+            class="bg-gradient-to-r from-pink-100 to-blue-100 p-4 sm:p-6 rounded-xl mb-6"
+          >
+            <h3
+              class="text-lg sm:text-xl font-semibold text-pink-500 mb-4 text-center"
+            >
+              Por que escolher os produtos dos Trolls?
+            </h3>
+            <div class="grid md:grid-cols-2 gap-4">
+              <div class="flex items-center space-x-3">
+                <div
+                  class="w-8 h-8 bg-pink-300 rounded-full flex items-center justify-center"
+                >
+                  <span class="text-white font-bold">✓</span>
+                </div>
+                <span class="text-gray-700 text-sm"
+                  >Desenvolvidos especialmente para crianças</span
+                >
+              </div>
+              <div class="flex items-center space-x-3">
+                <div
+                  class="w-8 h-8 bg-blue-300 rounded-full flex items-center justify-center"
+                >
+                  <span class="text-white font-bold">✓</span>
+                </div>
+                <span class="text-gray-700 text-sm"
+                  >Sabores e cores que tornam a escovação divertida</span
+                >
+              </div>
+              <div class="flex items-center space-x-3">
+                <div
+                  class="w-8 h-8 bg-pink-300 rounded-full flex items-center justify-center"
+                >
+                  <span class="text-white font-bold">✓</span>
+                </div>
+                <span class="text-gray-700 text-sm"
+                  >Aprovados por dentistas pediatras</span
+                >
+              </div>
+              <div class="flex items-center space-x-3">
+                <div
+                  class="w-8 h-8 bg-blue-300 rounded-full flex items-center justify-center"
+                >
+                  <span class="text-white font-bold">✓</span>
+                </div>
+                <span class="text-gray-700 text-sm"
+                  >Qualidade e segurança garantidas</span
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- Logos Section -->
+          <div class="mt-8 p-4 bg-white rounded-xl border border-pink-200">
+            <h3 class="text-lg font-semibold text-pink-500 mb-4 text-center">
+              Em colaboração:
+            </h3>
+            <div
+              class="flex flex-col sm:flex-row justify-center items-center gap-6"
+            >
+              <img
+                src="imgs/logo-gum.png"
+                alt="Logo da GUM"
+                class="max-w-[160px] md:max-w-[300px] md:h-32 h-22 object-contain"
+              />
+              <img
+                src="imgs/logo-unisanta.png"
+                alt="Logo da Unisanta"
+                class="max-w-[160px] md:max-w-[300px] md:h-32 h-22 object-contain"
+              />
+            </div>
+          </div>
+        </div>
       </main>
 
       <!-- Footer -->
@@ -499,24 +691,26 @@
       // Elementos da DOM
       const educationTab = document.getElementById("educationTab");
       const timerTab = document.getElementById("timerTab");
+      const productsTab = document.getElementById("productsTab");
       const educationContent = document.getElementById("educationContent");
       const timerContent = document.getElementById("timerContent");
+      const productsContent = document.getElementById("productsContent");
 
+      const timeDisplay = document.getElementById("timeDisplay");
+      const timerStatus = document.getElementById("timerStatus");
+      const scoreDisplay = document.getElementById("score");
+      const nextReward = document.getElementById("nextReward");
+      const brushingTip = document.getElementById("brushingTip");
       const startBtn = document.getElementById("startBtn");
       const pauseBtn = document.getElementById("pauseBtn");
       const resetBtn = document.getElementById("resetBtn");
       const restartBtn = document.getElementById("restartBtn");
-      const timeDisplay = document.getElementById("timeDisplay");
-      const timerStatus = document.getElementById("timerStatus");
+      const completionMessage = document.getElementById("completionMessage");
+      const totalPoints = document.getElementById("totalPoints");
       const progressCircle = document.getElementById("progressCircle");
       const progressCircleMobile = document.getElementById(
         "progressCircleMobile"
       );
-      const scoreDisplay = document.getElementById("score");
-      const nextReward = document.getElementById("nextReward");
-      const completionMessage = document.getElementById("completionMessage");
-      const totalPoints = document.getElementById("totalPoints");
-      const brushingTip = document.getElementById("brushingTip");
 
       // Variáveis do timer
       let totalTime = 120; // 2 minutos em segundos
@@ -543,12 +737,15 @@
         // Esconder todos os conteúdos
         educationContent.classList.add("hidden");
         timerContent.classList.add("hidden");
+        productsContent.classList.add("hidden");
 
         // Remover estilos ativos de todas as abas
         educationTab.classList.remove("bg-pink-300", "text-white");
         educationTab.classList.add("text-pink-400");
         timerTab.classList.remove("bg-pink-300", "text-white");
         timerTab.classList.add("text-pink-400");
+        productsTab.classList.remove("bg-pink-300", "text-white");
+        productsTab.classList.add("text-pink-400");
 
         // Mostrar conteúdo e estilizar aba ativa
         if (tabName === "education") {
@@ -559,11 +756,16 @@
           timerContent.classList.remove("hidden");
           timerTab.classList.add("bg-pink-300", "text-white");
           timerTab.classList.remove("text-pink-400");
+        } else if (tabName === "products") {
+          productsContent.classList.remove("hidden");
+          productsTab.classList.add("bg-pink-300", "text-white");
+          productsTab.classList.remove("text-pink-400");
         }
       }
 
       educationTab.addEventListener("click", () => setActiveTab("education"));
       timerTab.addEventListener("click", () => setActiveTab("timer"));
+      productsTab.addEventListener("click", () => setActiveTab("products"));
 
       // Atualizar display do tempo
       function updateTimeDisplay() {
