--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
             >
               <div class="text-center mb-4">
                 <div
-                  class="w-24 h-24 sm:w-32 sm:h-32 mx-auto mb-3 bg-gradient-to-r from-blue-200 to-pink-200 rounded-full flex items-center justify-center"
+                  class="w-24 h-24 sm:w-32 sm:h-32 mx-auto mb-3 flex items-center justify-center"
                 >
                   <a href="https://www.gumprofissional.com.br/infantil/trolls/flosser-trolls-20unidades"><img src="imgs/fio-gum.PNG" alt=""></a>
                 </div>
