--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               class="list-decimal list-inside space-y-1 sm:space-y-2 text-gray-700 text-xs sm:text-sm"
             >
               <li>Use fio dental pelo menos uma vez ao dia</li>
-              <li>Use uma quantidade pequena de pasta de dentes</li>
+              <li>Use a quantidade de um grão de ervilha de pasta de dentes.</li>
               <li>Escove suavemente em movimentos circulares</li>
               <li>Não se esqueça de escovar a parte interna dos dentes</li>
               <li>Escove a língua para remover bactérias</li>
@@ -493,6 +493,10 @@
           >
             Produtos dos Trolls para Higiene Bucal
           </h2>
+
+          <p class="text-md sm:text-md text-gray-500 mb-4 sm:mb-6 text-center">
+            Para deixar a experiência ainda mais divertida, a GUM desenvolveu escovas que brilham no escuro, fio dental com um supercabo colorido, pasta e enxaguante bucal com gostinho de chiclete! Tudo para um sorriso incrível e tornar a hora da higiene muito mais divertida. Com esses cuidados, até você vai ter vontade de cantar com os Trolls!
+          </p>
 
           <div
             class="grid md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6 mb-6 sm:mb-8"
